test/fail/duplicate-import4.mo
import { type T } "duplicate-import/A";
import { Inner = { type T } } "duplicate-import/B";
